# Space-Invaders

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  notes.md
src/.cache/clangd/index/: bullet.cpp.8777F8739E7FB924.idx  bullet.h.792E9A7F612B6CD6.idx  bulletsController.cpp.2ADB49ADF880C0C8.idx  bulletsController.h.B044C35443F8A84C.idx  constants.h.A1AABC79161BAE29.idx  entity.cpp.E33AF7D64691D70F.idx  entity.h.366D6B9E83A25B5F.idx  gameController.cpp.4E856C27993D1CEE.idx  gameController.h.62BE875F16CE55ED.idx  invader.cpp.B6AC51DDEB7176B3.idx  invader.h.B548A90FEE85EE66.idx  invadersController.cpp.BD26E35343BA578F.idx  invadersController.h.B02DBA4E1706DE3F.idx  main.cpp.7E0C475315EE5ADC.idx  player.cpp.F7878AEF5661DE28.idx  player.h.BD8A3E46074A8160.idx  soundController.cpp.C3C7FADAD7799A69.idx  soundController.h.51D3745C8AEB2A83.idx  texturesController.h.B1F726CE1E6AD867.idx  timedBulletsController.cpp.BBBAEB876BCE99BF.idx  timedBulletsController.h.89EB75216174B527.idx  ufo.cpp.D9996560831D46D3.idx  ufo.h.3E65E07478251417.idx  uiController.cpp.E80B4E60CA055ECF.idx  uiController.h.A2D2F3E210F09236.idx
src/Bullet/: bullet.cpp  bullet.h
src/BulletsController/: bulletsController.cpp  bulletsController.h
src/BulletsManagement/: bulletsManagement.cpp  bulletsManagement.h
src/Entity/: entity.cpp  entity.h
src/GameController/: gameController.cpp  gameController.h
src/Invader/: invader.cpp  invader.h
src/InvadersController/: invadersController.cpp  invadersController.h
src/InvadersManagement/: invadersManagement.cpp  invadersManagement.h
src/Other/: constants.h
src/Player/: player.cpp  player.h
src/SoundController/: soundController.cpp  soundController.h
src/TexturesController/: texturesController.h
src/TexturesManagement/: texturesManagement.h
src/TimedBulletsController/: timedBulletsController.cpp  timedBulletsController.h
src/TimedBulletsManagement/: timedBulletsManagement.cpp  timedBulletsManagement.h
src/UIController/: uiController.cpp  uiController.h
src/Ufo/: ufo.cpp  ufo.h
